src/components/posts/style/PostCard.css
.post-card {
  display: flex;
  flex-direction: column;
  text-align: center;

  place-self: center;
  max-width: 90dvw;

  border: var(--default-border);
  border-radius: var(--default-border-radius);
  box-shadow: var(--default-box-shadow);

  background-color: var(--card-background-color);

  a {
    text-decoration: none;
    color: inherit;

    &:hover {
      text-decoration: underline;
    }
  }

  .author-label {
    display: flex;
    align-items: center;
    gap: 20px;
    background-color: var(--card-background-color);
    box-shadow: 0px 0px 2px 0px hsl(0, 0%, 0%, 0.6);

    .avatar {
      width: 40px;
    }

    .text-label {
      display: flex;
      align-items: center;
      justify-content: start;
      gap: 10px;

      overflow: hidden;

      .icon {
        flex: 1 0 auto;
      }

      * {
        overflow: hidden;
        text-overflow: ellipsis;
      }

      .first-name {
        margin-left: -8px;
        font-weight: bolder;
      }

      .username {
        opacity: 0.8;
      }
    }
  }

  .date {
    position: relative;
    margin-top: -30px;
    top: 25px;
    width: fit-content;
    align-self: end;

    font-size: smaller;

    padding: 2px 4px;
    padding-top: 0;

    margin-bottom: 10px;

    border-bottom-left-radius: 10px;

    background-color: var(--card-background-color);

    box-shadow: 0px 1px 1px 0px hsl(0, 0%, 0%, 0.6);

    .icon {
      margin-right: 5px;
    }
  }

  .media-container {
    .media {
      max-height: 75dvh;
      max-width: 100%;

      /* Prevent extra padding */
      display: block;
    }
  }

  .meta {
    display: grid;

    .description {
      padding: 10px;
      margin-top: 10px;
      margin-bottom: 5px;
    }

    .interaction-wrapper {
      display: grid;
      grid-template-columns: repeat(3, 1fr);
      justify-items: center;
      margin: 10px;

      button {
        width: 60px;
        border-radius: 50px;
      }

      :first-child {
        justify-self: end;
      }

      :last-child {
        justify-self: start;
        grid-column-start: 3;
      }
    }
  }

  .comment-form {
    &::before {
      margin: 10px -10px;
      content: '';
      border: 2px dashed black;
    }

    display: grid;
    padding: 10px;

    [type='text'] {
      padding-left: 5px;
      border-style: none;
      border-radius: 2px;
      margin: 10px 0;
      margin-bottom: 0;
      width: 90%;
      max-width: 500px;
      justify-self: center;
    }

    [type='submit'] {
      margin-top: 15px;
      justify-self: center;
      width: 100px;
    }
  }

  .comments {
    margin: 10px;
    display: grid;
    gap: 10px;

    > ::before {
      grid-column: 1/3;
      content: '';
      outline: 1px solid black;
      outline-style: dashed;
    }

    .comment {
      display: grid;
      grid-template-columns: minmax(80px, 1fr) 2fr;
      align-items: center;

      padding: 0 10px;
      gap: 10px;

      .author {
        align-self: first baseline;
        padding: 5px 0;
        text-decoration: none;
        color: inherit;

        &:hover {
          text-decoration: underline;
        }

        .first-name {
          overflow: hidden;
          text-overflow: ellipsis;
        }
        .avatar {
          height: 20px;
        }
      }

      .content {
        text-align: initial;
        font-style: normal;
        font-size: smaller;
      }
    }
  }
}

